tests/machine/x/c/map_nested_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/map_nested_assign.c: In function ‘main’:
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:100:26: warning: passing argument 2 of ‘map_int_bool_put’ makes integer from pointer without a cast [-Wint-conversion]
  100 |   map_int_bool_put(&_t1, "outer", _t2);
      |                          ^~~~~~~
      |                          |
      |                          char *
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:29:51: note: expected ‘int’ but argument is of type ‘char *’
   29 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                               ~~~~^~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:100:35: error: incompatible type for argument 3 of ‘map_int_bool_put’
  100 |   map_int_bool_put(&_t1, "outer", _t2);
      |                                   ^~~
      |                                   |
      |                                   map_string_int
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:29:60: note: expected ‘int’ but argument is of type ‘map_string_int’
   29 | static void map_int_bool_put(map_int_bool *m, int key, int value) {
      |                                                        ~~~~^~~~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:101:14: error: incompatible types when initializing type ‘int’ using type ‘map_int_bool’
  101 |   int data = _t1;
      |              ^~~
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:102:7: error: request for member ‘data’ in something not a structure or union
  102 |   data.data["outer"].data["inner"] = 2;
      |       ^
/workspace/mochi/tests/machine/x/c/map_nested_assign.c:103:22: error: request for member ‘data’ in something not a structure or union
  103 |   printf("%d\n", data.data["outer"].data["inner"]);
      |                      ^

   1: #include <stdio.h>
